--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       <input id="input-field" />
       <br />
       <button id="submit-button">Submit</button>
+      <p>1. Player 1 starts, press `Submit` button to start dice roll.</p>
       <p>Output:</p>
       <div id="output-div"></div>
     </div>
