--- a/index.html
+++ b/index.html
@@ -55,7 +55,22 @@
       <input id="input-field" />
       <br />
       <button id="submit-button">Submit</button>
-      <p>1. Player 1 starts, press `Submit` button to start dice roll.</p>
+      <p>
+        <u>Instructions</u> <br /><br />
+
+        There are 2 players and players take turns. <br />
+        When a player clicks `Submit`, the game rolls 2 dice and shows the dice
+        rolls, for example 3 and 6.
+        <br /><br />
+        The player picks the order of the dice they want. <br />
+        For example, if they wanted the number 63, they would specify that the
+        2nd dice goes first.
+
+        <br /><br />
+        You can choose how the player specifies dice order. After both players
+        have rolled and chosen dice order, the player with the higher combined
+        number wins.
+      </p>
       <p>Output:</p>
       <div id="output-div"></div>
     </div>
